Fix contrast issue raised by Caleb

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -37,7 +37,7 @@ body {
 	block-size: 100%;
 	accent-color: var(--brand);
 	background-color: var(--surface1);
-	// color: var(--text1);
+	color: var(--text1);
 }
 
 :where(code, kbd, samp) {
